implemented steps server error tests

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1214,6 +1214,10 @@ button.-solid {
   font-size: 0.9em;
 }
 
+.log.error .message{
+  margin-left: 0.2em;
+}
+
 .animated {
   animation-duration: 1s;
 
