chore(lint): set up linting

--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -6,7 +6,7 @@
 Sources:
 - https://github.com/mike-engel/a11y-css-reset
 - https://github.com/csstools/sanitize.css
-
+*/
 
 /* If the user has set their device to "prefers reduced motion". */
 @media (prefers-reduced-motion: reduce) {
