--- a/src/scss/_animations.scss
+++ b/src/scss/_animations.scss
@@ -50,19 +50,19 @@
   75%,
   90%,
   to {
-    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    animation-timing-function: cubic-bezier(.215, .61, .355, 1);
   }
 
   from {
-    transform: translate3d(3000px, 0, 0);
 
     opacity: 0;
+    transform: translate3d(3000px, 0, 0);
   }
 
   60% {
-    transform: translate3d(-5px, 0, 0);
 
     opacity: 1;
+    transform: translate3d(-5px, 0, 0);
   }
 
   75% {
@@ -84,8 +84,8 @@
   }
 
   to {
-    transform: translate3d(2000px, 0, 0);
 
     opacity: 0;
+    transform: translate3d(2000px, 0, 0);
   }
 }
