--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -6,10 +6,10 @@
 
 @mixin slashes {
   position: absolute;
-  right: -0.7rem;
-
-  content: "/";
-  text-decoration: none;
+  right: -.7rem;
 
   color: var(--color-secondary);
+  text-decoration: none;
+
+  content: "/";
 }
