--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -542,7 +542,7 @@ button.-inverted {
   }
 }
 
-.-btn.-build-timeout {
+.-btn.-repo-timeout {
   margin: 0;
   margin-left: 1em;
   padding: 4px 12px;
@@ -1350,7 +1350,7 @@ button.-solid {
   font-weight: 300;
 }
 
-.inputs.build-timeout input {
+.inputs.repo-timeout input {
   width: 5em;
   padding: 0.5em;
 
@@ -1362,16 +1362,16 @@ button.-solid {
   background: none;
 }
 
-.build-timeout input:focus {
+.repo-timeout input:focus {
   border-color: var(--color-cyan);
 }
 
-.build-timeout {
+.repo-timeout {
   margin-top: 1em;
   margin-left: 3em;
 }
 
-.build-timeout .label {
+.repo-timeout .label {
   margin-left: 0.75em;
 
   font-size: 16px;
